--- a/TestFolderForGitHub/Test1.ipynb
+++ b/TestFolderForGitHub/Test1.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "Inputting some text, just to see what that would look like.\n",
     "\n",
-    "Let me try some mathematical formatting, like this $\\frac{1}{2}$.  Will it look like I expect?  Who knows.  Just playing around for now."
+    "Let me try some mathematical formatting, like this $\\frac{1}{2}$.  Will it look like I expect?  Who knows.  Just playing around for now.\n",
+    "\n",
+    "I have added a new sentence in the first text box."
    ]
   },
   {
