--- a/Numerical_Integration.ipynb
+++ b/Numerical_Integration.ipynb
@@ -13,13 +13,13 @@
     "\n",
     "In this notebook, we concern ourselves with the evaluation of a **definite** integral, $\\displaystyle \\int_a^b f(x) \\ dx$.\n",
     "\n",
-    "## Evaluating a Definite Integral with the Fundamental Theorem of Calculus (FTC)\n",
+    "### Evaluating a Definite Integral with the Fundamental Theorem of Calculus (FTC)\n",
     "\n",
     "We already know that if we can find an antiderivative of $f(x)$, then by the Fundamental Theorem of Calculus, $$ \\int_a^b f(x) \\ dx = F(b) - F(a), $$ where $F(x)$ is an antiderivative of $f(x)$.\n",
     "\n",
     "For example, $$ \\int_2^5 x^2 \\ dx = \\left. \\frac{x^3}{3} \\right|_2^5 = \\frac{5^3}{3} - \\frac{2^3}{3} = \\frac{125-8}{3} = \\frac{117}{3}.$$\n",
     "\n",
-    "## Two Situations when the FTC Cannot Be Used\n",
+    "### Two Situations when the FTC Cannot Be Used\n",
     "\n",
     "There are two situations when the FTC cannot be used:\n",
     "\n",
@@ -64,7 +64,7 @@
     "\n",
     "For both of these situations, we can <b>approximate</b> (that is, calculate an estimate of) the definite integral.  To do so, it will be beneficial to recall the definition of the definite integral in terms of the limit of a Riemann sum.\n",
     "\n",
-    "## Review from Calculus I: Definition of the Definite Integral\n",
+    "### Review from Calculus I: Definition of the Definite Integral\n",
     "\n",
     "![05p321_f13.jpg](attachment:05p321_f13.jpg)\n",
     "\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -95,10 +95,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f59cd5f3668>"
+       "<IPython.lib.display.YouTubeVideo at 0x7f59cd58e2e8>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
     "\n",
     "Luckily, none of this is necessary when we <b>approximate</b> the integral!  In that case, we omit the limit, and choose a 'small' (relative to an infinitely large) value for $n$.\n",
     "\n",
-    "## Right Point Rule and Left Point Rule\n",
+    "### Right Point Rule and Left Point Rule\n",
     "\n",
     "In the following video, you will see how omitting the limit readily leads to two numerical integration methods, namely the Right Point Rule and the Left Point Rule, and how those methods can be used to approximate the value of the integral in the example used to illustrate case 2 above."
    ]
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Trapezoid Rule\n",
+    "### Trapezoid Rule\n",
     "\n",
     "As was mentioned in the video, neither the Right Point Rule nor the Left Point Rule are ideal, because each omits an important data point.  The Right Point Rule does not make use of the first data point, and the Left Point Rule does not make use of the last data point.\n",
     "\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "0.6415128358578669"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "3.141592486923127"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,21 +253,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summary\n",
+    "### Summary\n",
     "\n",
     "Not sure if this is needed?????  Perhaps refer the students to the Summary Sheet on eClass?\n",
     "\n",
-    "## Don't Forget!\n",
+    "### Don't Forget!\n",
     "\n",
     "Don't forget to return to eClass to complete the pre-class quiz."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
